# AI_CUDA

./: .gitignore  CUDA_dell.md  cuda.md  cuda_面试.md  pytorch.md  work.md  交叉熵.md
Work/: tvm_raspberry.md  work.md
cuda_code/: matrix_add.cu  tensor_core_gemm.cu  tensorcore.md
cuda_code/tenscore/: tencore_gemm_grok.cu  tensor_core_gemm.cu  tensor_core_gemm.md  tensorcore.drawio
feiniao/: hebingfangcun.exp  hiebing.cu
feiniao/flashattention/: CMakeLists.txt  flashattn.cpp  flashattn_grok.cu  q 内存访问.drawio
feiniao/flashattn_cpu/: CMakeLists.txt  flashattn_cpu.c
feiniao/flashattn_grok/: CMakeLists.txt  flash_attention.pptx  flashattn_grok.cu  flashattn_grok.md  flashattn_grok_change_from_mimal.cu
feiniao/shard_meo_bank_confl/: bank conflict.drawio  bank_confict.md
feiniao/合并fangcun/: hebingfangcun.lib
libtorch/: CMakeLists.txt  test.cpp
operator/: ac.md  conv.md  cuda_gpu.md  operator_gemm.md  overall.md  reduce.md
operator/gemm/: Basic Matrix Multiplication CUDA.cu  Optimized Matrix Multiplication CUDA.cu  cuda_matrix_multiply.cu  gemm.cu
tvm/: autotvm.md
几何/: attention1.py  simd.md  剪枝.md  工具.md  量化.md
